<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@android:color/holo_blue_light"
    tools:context="com.applicatum.schafkopfhelfer.fragments.GameMainFragment">

    <org.askerov.dynamicgrid.DynamicGridView
        android:id="@+id/usersGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="2dp"
        android:numColumns="3">


    </org.askerov.dynamicgrid.DynamicGridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:background="@drawable/background_field_game">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/sauspiel"
                        android:layout_margin="2dp"
                        android:textColor="@color/font_frame_active"
                        android:background="@drawable/button_shape_round_white_border"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/ramsch"
                        android:layout_margin="2dp"
                        android:textColor="@color/font_frame_active"
                        android:background="@drawable/button_shape_round_white_border"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/solo"
                        android:layout_margin="2dp"
                        android:textColor="@color/font_frame_active"
                        android:background="@drawable/button_shape_round_white_border"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/wenz"
                        android:layout_margin="2dp"
                        android:textColor="@color/font_frame_active"
                        android:background="@drawable/button_shape_round_white_border"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/schneider"
                        android:layout_margin="2dp"
                        android:textColor="@color/font_frame_active"
                        android:background="@drawable/button_shape_round_white_border"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/schwarz"
                        android:layout_margin="2dp"
                        android:textColor="@color/font_frame_active"
                        android:background="@drawable/button_shape_round_white_border"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                    </NumberPicker>

                    <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                    </NumberPicker>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape_round_white_border"
                android:text="R"
                android:textColor="@color/font_frame_active"
                android:layout_margin="2dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape_round_white_border"
                android:text="OK"
                android:textColor="@color/font_frame_active"
                android:layout_margin="2dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
